[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Menus/End_screen.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/Setting_button-export.png" type="Texture" id=2]

[node name="End_screen" type="Control" groups=[
"update_font",
]]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -352.0
margin_top = 88.0
margin_right = 352.0
margin_bottom = 448.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 640.0
margin_bottom = 14.0
custom_constants/separation = 30

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer"]
margin_right = 640.0
margin_bottom = 14.0
rect_min_size = Vector2( 640, 0 )
custom_colors/font_color = Color( 0.211765, 0.968627, 0.184314, 1 )
autowrap = true

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 128.0
margin_top = 488.0
margin_right = 256.0
margin_bottom = 530.0
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TextureButton"]
margin_right = 128.0
margin_bottom = 40.0
custom_colors/font_color = Color( 0.211765, 0.968627, 0.184314, 1 )
text = "RESTART"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton3" type="TextureButton" parent="."]
margin_left = 696.0
margin_top = 488.0
margin_right = 824.0
margin_bottom = 530.0
texture_normal = ExtResource( 2 )

[node name="Label" type="Label" parent="TextureButton3"]
margin_right = 128.0
margin_bottom = 40.0
custom_colors/font_color = Color( 0.211765, 0.968627, 0.184314, 1 )
text = "QUIT"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="TextureButton3" to="." method="_on_TextureButton3_pressed"]
